--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@ body {
 }
 img {
     width: 100%;
+    height: 100%;
     object-fit: cover;
 }
 h1,
@@ -25,6 +26,13 @@ h4 {
     overflow: hidden;
     top: -20%;
     position: absolute;
+}
+.checkout-banner {
+    height: 90px;
+}
+.checkout-profile {
+    border-radius: 10px;
+    overflow: hidden;
 }
 .bg-white {
     background-color: #f7fafc !important;
@@ -82,7 +90,8 @@ h4 {
     border-color: #e2e8f0;
     box-shadow: 0 0 8px #ddd;
     overflow: hidden;
-    border-radius: 0.75rem;
+    border-radius: 0.5rem;
+    text-align:left;
 }
 .just-pay-z4a72a {
     border-style: solid;
@@ -99,7 +108,7 @@ h4 {
     border-block: thin;
     max-width: 480px;
     margin: auto;
-    z-index: 1100;
+    z-index: 10;
 }
 .just-pay-1fbseht {
     display: -webkit-box;
@@ -125,6 +134,29 @@ h4 {
     padding-bottom: 0.25rem;
     border-top: solid 1px;
     border-color: #E2E8F0;
+}
+
+.just-pay-1fbsenh {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-align-items: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -webkit-box-pack: space-around;
+    -ms-flex-pack: space-around;
+    -webkit-justify-content: space-around;
+    justify-content: space-around;
+    position: -webkit-sticky;
+    position: sticky;
+    justify-items: center;
+    width: 100%;
+    height:4rem ;
+    z-index: 2;
+    padding-top: 0.25rem;
+    padding-bottom: 0.25rem;
 }
 .just-pay-1hy3qdb {
     display: -webkit-inline-box;
@@ -169,4 +201,53 @@ h4 {
     margin-inline-start: 1rem;
     -webkit-margin-end: 1rem;
     margin-inline-end: 1rem;
+}
+.btn-outline-primary {
+    color: #212529;
+    border-color: #fff;
+    box-shadow: none !important;
+}
+.btn-check:active+.btn-outline-primary, .btn-check:checked+.btn-outline-primary, .btn-outline-primary.active, .btn-outline-primary.dropdown-toggle.show, .btn-outline-primary:active {
+    color: #212529;
+    background-color: #fff;
+    border-color: #212529;
+}
+.btn-check:active+.btn-outline-primary > div > .just-pay-13e7uab, .btn-check:checked+.btn-outline-primary > div > .just-pay-13e7uab, .btn-outline-primary.active > div > .just-pay-13e7uab, .btn-outline-primary.dropdown-toggle.show > div > .just-pay-13e7uab, .btn-outline-primary:active > div > .just-pay-13e7uab {
+    position: absolute;
+    display: block;
+    top: -24px;
+    left: -14px;
+    transform: rotate(45deg);
+    width: 20px;
+    height: 52px;
+    background-color: #212529;
+}
+.just-pay-13e7uab::before {
+    content: "";
+    position: absolute;
+    top: 20px;
+    left: 8px;
+    width: 5px;
+    height: 10px;
+    display: block;
+    border-width: 2.5px 2.5px;
+    border-style: solid solid;
+    border-image: initial;
+    border-top: none;
+    border-left: none;
+    color:white;
+}
+.harg-box {
+    font-size: 14px;
+    color: #718096;
+    font-weight: 700;
+}
+@media screen and (max-width: 460px) {
+    .text-box {
+        font-size: 12px;
+    }
+    .harg-box {
+        font-size: 10px;
+        color: #718096;
+    }
 }
