--- a/style.css
+++ b/style.css
@@ -205,18 +205,27 @@ h4 {
 .btn-outline-primary {
     color: #212529;
     border-color: #fff;
-    box-shadow: none !important;
+    box-shadow: 0 0 10px #ddd !important;
+    background-color:#fff;
 }
 .btn-check:active+.btn-outline-primary, .btn-check:checked+.btn-outline-primary, .btn-outline-primary.active, .btn-outline-primary.dropdown-toggle.show, .btn-outline-primary:active {
     color: #212529;
     background-color: #fff;
     border-color: #212529;
 }
+.just-pay-13e7uab{
+    display: none;
+}
+.btn-check:hover+.btn-outline-primary {
+    background-color: white!important;
+    color:#212529;
+    border: solid 1px #212529;
+}
 .btn-check:active+.btn-outline-primary > div > .just-pay-13e7uab, .btn-check:checked+.btn-outline-primary > div > .just-pay-13e7uab, .btn-outline-primary.active > div > .just-pay-13e7uab, .btn-outline-primary.dropdown-toggle.show > div > .just-pay-13e7uab, .btn-outline-primary:active > div > .just-pay-13e7uab {
     position: absolute;
     display: block;
-    top: -24px;
-    left: -14px;
+    top: -25px;
+    left: -15px;
     transform: rotate(45deg);
     width: 20px;
     height: 52px;
